test/testdata/classes/methods/init/invalid_property_access_error.lox
class Foo {
  init() {}
}
// error: property access is not valid for 'function' object
// lint warning: property 'x' has not been declared or assigned anywhere
Foo().init.x;
